--- a/src/RateWindow.css
+++ b/src/RateWindow.css
@@ -9,7 +9,7 @@
   );
   width: 412px;
 }
-.oval,
+
 .star-container {
   cursor: pointer;
   transition: 300ms;
@@ -43,20 +43,11 @@ h2 {
   display: flex;
   justify-content: space-between;
 }
-.rating-scale div:hover {
+.oval:hover {
   background: var(--Orange, #fc7614);
-}
-.oval span {
-  color: var(--Medium-Gray, #7c8798);
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0.2px;
-}
-.rating-scale div:hover,
-.oval span:hover {
   color: white;
 }
+
 .submit {
   all: unset;
   margin-top: 32px;
@@ -76,4 +67,26 @@ h2 {
   font-size: 15px;
   font-weight: 700;
   letter-spacing: 2px;
+}
+.oval {
+  all: unset;
+  cursor: pointer;
+  transition: 300ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  background: var(--Dark-Blue, #262e38);
+  border-radius: 33px;
+  color: var(--Medium-Gray, #7c8798);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+}
+.active {
+  background: var(--Medium-Gray, #7c8798);
+  color: white;
 }
