--- a/src/ThankYou.css
+++ b/src/ThankYou.css
@@ -2,11 +2,47 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 32px 39px 32px 32px;
+  padding: 45px 40px 45px 32px;
   border-radius: 30px;
   background: var(
     --black-gradient,
     radial-gradient(98.96% 98.96% at 50% 0%, #232a34 0%, #181e27 100%)
   );
   width: 412px;
+}
+.rating-results {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+.result-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 22.5px;
+  background: var(--Dark-Blue, #262e38);
+  padding: 4px 20px;
+  height: 32px;
+}
+.result-container span {
+  color: var(--Orange, #fc7614);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+}
+.feedback-comment {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+h2,
+p {
+  text-align: center;
+}
+p {
+  color: var(--Light-Grey, #969fad);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
 }
